# helm

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  CONSOLIDATED_REFACTORING_PROPOSAL.md  CONTRIBUTING.md  Cargo.toml  Makefile  PLUGIN_CONSOLIDATION_PROPOSAL.md  README.initial.md  README.md  pyproject.toml  rustfmt.toml  untitled:plan-helm.prompt.md
crates-old/helm-core/: Cargo.toml
crates-old/helm-core/src/: error.rs  lib.rs
crates-old/helm-core/src/tests/: config.rs  ir.rs
crates-old/helm-object/: Cargo.toml
crates-old/helm-object/src/: property.rs
crates-old/helm-object/src/tests/: tree.rs
crates/helm-cli/: Cargo.toml
crates/helm-cli/src/: helm_arm.rs  main.rs
crates/helm-cli/tests/: cli_smoke.rs
crates/helm-device/: Cargo.toml
crates/helm-device/src/: address_map.rs  backend.rs  bus.rs  connection.rs  coop_scheduler.rs  device.rs  device_ctx.rs  dma.rs  fdt.rs  irq.rs  irq_wire.rs  lib.rs  loader.rs  mmio.rs  platform.rs  platform_v2.rs  transaction.rs
crates/helm-device/src/arm/: bcm_gpio.rs  bcm_mailbox.rs  bcm_mini_uart.rs  bcm_sys_timer.rs  gic.rs  mod.rs  pl011.rs  pl031.rs  pl061.rs  sp804.rs  sp805.rs  sysregs.rs
crates/helm-device/src/arm/gic/: icc.rs  redistributor.rs  v2.rs  v4.rs
crates/helm-device/src/pci/: bus.rs  config.rs  host.rs  mod.rs  traits.rs  transport.rs
crates/helm-device/src/pci/capability/: acs.rs  mod.rs  msix.rs  pm.rs
crates/helm-device/src/proto/: amba.rs  axi.rs  mod.rs  pci.rs
crates/helm-device/src/tests/: address_map_test.rs  arm_devices.rs  backend.rs  bus.rs  connection_test.rs  coop_scheduler_test.rs  device_ctx_test.rs  device_trait.rs  fdt.rs  irq.rs  irq_wire_test.rs  loader_test.rs  mmio.rs  mod.rs  pl011.rs  platform.rs  platform_v2_test.rs  proto_buses.rs  scheduler_test.rs  transaction.rs
crates/helm-device/src/tests/pci/: bar_decl.rs  bus_host.rs  capabilities.rs  config_space.rs  mod.rs  virtio_pci.rs
crates/helm-device/src/tests/virtio/: devices.rs  mod.rs  queue.rs  transport.rs
crates/helm-device/src/virtio/: blk.rs  bt.rs  can.rs  console.rs  crypto.rs  features.rs  fs.rs  gpio.rs  gpu.rs  i2c.rs  iommu.rs  mem.rs  mod.rs  net.rs  pmem.rs  queue.rs  scmi.rs  scsi.rs  sound.rs  transport.rs  video.rs  vsock.rs  watchdog.rs
crates/helm-engine/: Cargo.toml
crates/helm-engine/src/: aarch64_se.rs  core_sim.rs  generic_session.rs  lib.rs  loader.rs  monitor.rs  sim.rs  symbols.rs
crates/helm-engine/src/fs/: mod.rs  session.rs
crates/helm-engine/src/loader/: arm64_image.rs  elf64.rs  mod.rs
crates/helm-engine/src/se/: backend.rs  classify.rs  linux.rs  linux_aarch64.rs  mod.rs  session.rs  thread.rs
crates/helm-engine/src/tests/: backend.rs  classify.rs  core_sim.rs  e2e_aarch64.rs  generic_inflate.rs  generic_rv64.rs  generic_session.rs  inflate_parity.rs  mod.rs  plugins.rs  session.rs  sim.rs  thread.rs  timing.rs
crates/helm-isa/: Cargo.toml  build.rs
crates/helm-isa/src/: frontend.rs  lib.rs
crates/helm-isa/src/arm/: mod.rs  regs.rs
crates/helm-isa/src/arm/aarch32/: mod.rs
crates/helm-isa/src/arm/aarch64/: cpu_state.rs  decode.rs  exec.rs  executor.rs  mem_bridge.rs  mod.rs  sysreg.rs  tlb.rs  trait_decoder.rs
crates/helm-isa/src/arm/aarch64/decode_files/: aarch64-dp-reg.decode  aarch64-ldst.decode
crates/helm-isa/src/arm/aarch64/tests/: cpu_state.rs  decode.rs  decode_coverage.rs  decode_name.rs  exec.rs  mod.rs  (+16 more)
crates/helm-isa/src/arm/decode_files/: aarch64-branch.decode  aarch64-dp-imm.decode  aarch64-fp.decode  aarch64-ldst.decode  aarch64-simd.decode
crates/helm-isa/src/arm/tests/: decode.rs  frontend.rs  mod.rs  regs.rs
crates/helm-isa/src/riscv/: cpu_state.rs  decoder.rs  executor.rs  mod.rs
crates/helm-isa/src/tests/: arm_decode.rs  frontend.rs  mod.rs  riscv.rs  riscv_trait.rs  x86.rs
crates/helm-isa/src/x86/: mod.rs
crates/helm-jit/: Cargo.toml
crates/helm-jit/src/: a64_emitter.rs  aarch64_translator.rs  interp.rs  ir.rs  jit.rs  lib.rs
crates/helm-jit/src/tests/: aarch64_translator.rs  e2e_a64.rs  mod.rs
crates/helm-llvm/: Cargo.toml  README.md
crates/helm-llvm/examples/: vector_add.ll
crates/helm-llvm/src/: accel_device.rs  accelerator.rs  device_bridge.rs  functional_units.rs  ir.rs  lib.rs  micro_op.rs  parser.rs  pci_bridge.rs  scheduler.rs  scratchpad.rs
crates/helm-llvm/src/tests/: accelerator.rs  device_bridge.rs  error.rs  functional_units.rs  ir.rs  memory.rs  micro_op.rs  mod.rs  pci_bridge.rs  scheduler.rs  scratchpad.rs
crates/helm-plugin/: Cargo.toml
crates/helm-plugin-api/: Cargo.toml
crates/helm-plugin-api/src/: component.rs  lib.rs
crates/helm-plugin-api/src/tests/: component.rs  dynamic.rs  loader.rs  mod.rs
crates/helm-plugin/src/: lib.rs  tests.rs
crates/helm-plugin/src/api/: dynamic.rs  loader.rs  mod.rs  plugin.rs
crates/helm-plugin/src/builtins/: debug.rs  mod.rs  trace.rs
crates/helm-plugin/src/builtins/debug/: fault_detect.rs  mod.rs
crates/helm-plugin/src/builtins/memory/: cache_sim.rs  mod.rs
crates/helm-plugin/src/builtins/trace/: execlog.rs  hotblocks.rs  howvec.rs  insn_count.rs  mod.rs  syscall_trace.rs
crates/helm-plugin/src/runtime/: bridge.rs  callback.rs  info.rs  mod.rs  registry.rs  scoreboard.rs
crates/helm-plugin/tests/: plugin_tests.rs
crates/helm-plugins/: Cargo.toml  DEPRECATED.md
crates/helm-plugins/src/: bridge.rs  info.rs  lib.rs  registry.rs
crates/helm-plugins/src/debug/: mod.rs
crates/helm-plugins/src/memory/: mod.rs
crates/helm-plugins/src/tests/: bridge.rs  mod.rs  plugins.rs  scoreboard.rs
crates/helm-plugins/src/trace/: execlog.rs  howvec.rs  insn_count.rs  mod.rs
crates/helm-python/: Cargo.toml
crates/helm-python/src/: lib.rs  platform.rs
crates/helm-systemc/: Cargo.toml
crates/helm-systemc/src/: bridge.rs  lib.rs
crates/helm-systemc/src/tests/: bridge.rs  clock.rs  tlm.rs
crates/helm-tcg/: Cargo.toml  build.rs
crates/helm-tcg/src/: a64_emitter.rs  block.rs  context.rs  interp.rs  ir.rs  jit.rs  lib.rs  threaded.rs
crates/helm-tcg/src/tests/: a64_emitter.rs  context.rs  e2e_a64.rs  interp.rs  ir.rs  jit_parity.rs  mod.rs  parity.rs
(+735 files in other folders)
