[workspace]
resolver = "2"
members = [
    "crates/helm-core",
    "crates/helm-decode",
    "crates/helm-object",
    "crates/helm-pipeline",
    "crates/helm-stats",
    "crates/helm-memory",
    "crates/helm-device",
    "crates/helm-timing",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["HELM Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/helm-sim/helm"
description = "Hybrid Emulation Layer for Microarchitecture"

[workspace.dependencies]
# Internal crates
helm-core      = { path = "crates/helm-core" }
helm-decode    = { path = "crates/helm-decode" }
helm-object    = { path = "crates/helm-object" }
helm-pipeline  = { path = "crates/helm-pipeline" }
helm-memory    = { path = "crates/helm-memory" }
helm-device    = { path = "crates/helm-device" }
helm-timing    = { path = "crates/helm-timing" }
helm-stats     = { path = "crates/helm-stats" }
helm-isa       = { path = "crates/helm-isa" }
helm-jit       = { path = "crates/helm-jit" }
helm-syscall   = { path = "crates/helm-syscall" }
helm-engine    = { path = "crates/helm-engine" }
helm-plugin    = { path = "crates/helm-plugin" }
helm-python    = { path = "crates/helm-python" }
helm-kvm       = { path = "crates/helm-kvm" }
helm-llvm      = { path = "crates/helm-llvm" }
helm-systemc   = { path = "crates/helm-systemc" }

# External dependencies
bitflags = "2"
pyo3 = "0.24"
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
parking_lot = "0.12"
flate2 = "1"
libc = "0.2"
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-jit = "0.116"
target-lexicon = "0.13"

[profile.profiling]
inherits = "release"
debug = 2
