[package]
name = "helm-device"
version.workspace = true
edition.workspace = true
description = "Device model framework: MMIO, IRQ, bus, and lifecycle for HELM"

[dependencies]
helm-core   = { workspace = true }
helm-object = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
