[package]
name    = "helm-engine"
version.workspace = true
edition.workspace = true

[dependencies]
helm-core.workspace    = true
helm-arch.workspace    = true
helm-event.workspace   = true
helm-stats.workspace   = true
helm-timing.workspace  = true
helm-devices.workspace = true
helm-debug.workspace   = true
thiserror.workspace    = true
log.workspace          = true
