[package]
name = "helm-isa"
version.workspace = true
edition.workspace = true
description = "ISA frontend traits and per-architecture decoders for HELM"

[dependencies]
helm-core = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
helm-memory = { workspace = true }

[build-dependencies]
helm-decode = { workspace = true }
