[package]
name = "helm-plugins"
version.workspace = true
edition.workspace = true
description = "Plugin system and built-in plugins for HELM (trace, memory, debug)"

[dependencies]
helm-core = { workspace = true }
helm-plugin-api = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
