[package]
name = "helm-python"
version.workspace = true
edition.workspace = true
description = "Python bindings (via PyO3) for the HELM simulator"

[lib]
name = "_helm_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
# extension-module: for building as a Python extension (.so / .pyd)
# Enable with: maturin build --features extension-module
extension-module = ["pyo3/extension-module"]

[dependencies]
helm-core   = { workspace = true }
helm-engine = { workspace = true }
helm-plugin = { workspace = true }
helm-stats  = { workspace = true }
helm-timing = { workspace = true }
pyo3 = { workspace = true }
serde_json = { workspace = true }
