[package]
name    = "helm-python"
version.workspace = true
edition.workspace = true

[lib]
name       = "_helm_ng"
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable when building as a Python extension (.so via maturin).
# The binary launcher (helm-aarch64) does NOT enable this.
extension-module = ["pyo3/extension-module"]

[dependencies]
helm-engine.workspace = true
helm-core.workspace   = true
pyo3 = { version = "0.22", features = ["abi3-py39"] }
