[package]
name = "helm-tcg"
version.workspace = true
edition.workspace = true
description = "TCG (Tiny Code Generator) IR for HELM dynamic binary translation"

[dependencies]
helm-core = { workspace = true }
helm-memory = { workspace = true }
log = { workspace = true }

[build-dependencies]
helm-decode = { workspace = true }
