[package]
name = "helm-tcg"
version.workspace = true
edition.workspace = true
description = "TCG (Tiny Code Generator) IR for HELM dynamic binary translation"

[dependencies]
helm-core = { workspace = true }
helm-memory = { workspace = true }
log = { workspace = true }
cranelift-codegen = { workspace = true }
cranelift-frontend = { workspace = true }
cranelift-module = { workspace = true }
cranelift-jit = { workspace = true }
target-lexicon = { workspace = true }

[build-dependencies]
helm-decode = { workspace = true }
